# data-ingestion-modern-stack-apr2025

./: README.md  pyproject.toml
solutions/: PyLadies_2025_Open_source_open_pipelines_Solutions.ipynb
workshop/: PyLadies_2025_Open_source_open_pipelines_Data_ingestion_with_modern_data_stack.ipynb
