[project]
name = "workshop-data-ingestion"
version = "0.1.0"
description = "Open source - open data pipelines. Data ingestion with modern data stack."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.3.3",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
]
